[package]
name = "factory_template"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
scale-info.workspace = true
parity-scale-codec.workspace = true
io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
io.workspace = true


[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gtest = "1.3.0"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
io.path = "io"
